bamboo-agent-base-windows/src/bb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: bingo
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  nodeSelector:
    kubernetes.io/os: linux
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: shell-demo
  namespace: bingo
spec:
  containers:
  - name: nginx
    image: nginx
  nodeSelector:
    kubernetes.io/os: linux
  restartPolicy: Always
